Roboto Font added and Post Dto

--- a/Backend/wwwroot/css/styles.css
+++ b/Backend/wwwroot/css/styles.css
@@ -4,11 +4,7 @@
 }
 
 body {
-    background-color: #00202e;
-}
-
-.fuzzySearch {
-    margin: 10rem;
+    background-color: #00141d;
 }
 
 .data-title {
