--- a/Backend/wwwroot/css/NavBar.css
+++ b/Backend/wwwroot/css/NavBar.css
@@ -1,11 +1,20 @@
 header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: .5rem;
-    background-color: #2c4875;
+    padding: .8rem 10%;
+    background-color: #003f5c;
+    color: white;
 }
 
 .nav-list-item {
     list-style-type: none;
+}
+
+.nav-list-item a {
+    all: unset;
+}
+
+.nav-list-item:hover {
+    cursor: pointer;
 }
