Fetch User Posts

--- a/Backend/wwwroot/css/styles.css
+++ b/Backend/wwwroot/css/styles.css
@@ -1,3 +1,15 @@
+/* Color Pallet */
+/*
+    #00202e Dark Blue
+    #003f5c Mid Blue
+    #2c4875 Light Blue
+    #8a508f Dark Purple
+    #bc5090 Light Purple
+    #ff6361 Red
+    #ff8531 Orange
+    #ffa600 Dark Yellow
+    #ffd380 Light Yellow
+*/
 * {
     margin: 0%;
     padding: 0%;
