Frontend POST request for creating new post

--- a/Backend/wwwroot/css/IndexPageStyles.css
+++ b/Backend/wwwroot/css/IndexPageStyles.css
@@ -42,6 +42,7 @@
 /* Post styling */
 
 .post-container {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
