--- a/Backend/wwwroot/css/IndexPageStyles.css
+++ b/Backend/wwwroot/css/IndexPageStyles.css
@@ -17,7 +17,7 @@
     color: whitesmoke;
 }
 
-.searchButton {
+.searchButton, #create-post-button-id, .dropbtn {
     width: 5rem;
     padding: .8rem;
     border: 1px solid #003f5c;
@@ -27,14 +27,14 @@
     color: rgb(195, 195, 195);
 }
 
-.searchButton:hover {
+.searchButton:hover, #create-post-button-id:hover {
     border: 2px solid whitesmoke;
     color: whitesmoke;
     cursor: pointer;
     padding: .7rem;
 }
 
-.searchButton:active {
+.searchButton:active, #create-post-button-id:hover {
     padding: .6rem;
     margin: .1rem 0rem;
 }
@@ -158,8 +158,8 @@
     justify-content: center;
     align-items: center;
     padding: 1rem;
-    width: 30rem;
-    background-color: #2c4875;
+    width: 25rem;
+    background-color: #003f5ced;
     border-radius: 1rem;
     box-shadow: 3px 3px 8px 3px rgba(0, 0, 0, 0.3);
     top: 30%;
@@ -194,14 +194,95 @@
     width: 20rem;
 }
 
+#create-post-title, #create-post-text {
+    padding: .3rem;
+    border: 3px solid #003f5c;
+    border-radius: 1rem;
+    font-size: .8rem;
+    background-color: #2c4875;
+    color: whitesmoke;
+    box-shadow: 2px 2px 3px 2px rgba(0, 0, 0, 0.1);
+}
+
+#create-post-text {
+    border-bottom-right-radius: .2rem;
+}
+
+#create-post-button-id:hover {
+    margin-top: .15rem;
+}
+
 .create-post-footer {
     display: flex;
     justify-content: space-between;
-    width: 20rem;
-    margin-top: 1rem;
+    align-items: center;
+    width: 21rem;
+    margin-top: .5rem;
 }
 
 .create-post-input-label {
     margin-top: .5rem;
     width: 20rem;
 }
+
+.dropbtn {
+    margin-left: .22rem;
+    padding: .6rem;
+    width: 3rem;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    text-align: center;
+    background-color: #2c4875;
+    min-width: 140px;
+    border-radius: .2rem;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content button {
+    all: unset;
+    color: rgb(195, 195, 195);
+    margin: .2rem;
+    padding: 4px;
+    border-radius: 5px;
+}
+
+.dropdown-content button:hover {
+    cursor: pointer;
+    color: whitesmoke;
+    padding: 3px;
+    border: 1px solid #003f5c;
+    background-color: #003f5c;
+}
+
+#active-dropdown-content {
+    color: whitesmoke;
+    padding: 3px;
+    border: 1px solid #003f5c;
+    background-color: #003f5c;
+}
+  
+
+.dropdown-content a:hover {background-color: #ddd;}
+  
+
+.dropdown:hover .dropdown-content {display: block;}
+  
+
+.dropdown:hover .dropbtn {background-color: #bc5090;} 
